# clothoDub

./: .gitmodules  CMakeLists.txt  README.md  clothoDub.py
include/clothodub/: clothodub.hpp
scripts/: clothoDub.py  clothoid_test.py  dubin_test.py  g1fitting_test.py
src/libclothodub/: clothodub.cpp
src/tools/: clothodub_test.cpp
